# cfrd

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  cfr-parts.yaml  compose.yml  main.cpp
docker/: Dockerfile  compose.yml
src/: cfr_types.h  config.hpp.in  ecfr_xsl.cpp  ecfr_xsl.h  main.cpp
test/: cfr-test.yaml
